infra/k8s/dashboard-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-depl
  namespace: expensio-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: ashuz057/expensio-dashboard
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-srv
  namespace: expensio-dev
spec:
  selector:
    app: dashboard
  ports:
    - name: dashboard
      protocol: TCP
      port: 3005
      targetPort: 3005
