infra/k8s/expense-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense
  template:
    metadata:
      labels:
        app: expense
    spec:
      containers:
        - name: expense
          image: ashuz057/expensio-expense
---
apiVersion: v1
kind: Service
metadata:
  name: expense-srv
spec:
  selector:
    app: expense
  ports:
    - name: expense
      protocol: TCP
      port: 3002
      targetPort: 3002
