infra/k8s/financial-data-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: financial-data-depl
  namespace: expensio-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: financial-data
  template:
    metadata:
      labels:
        app: financial-data
    spec:
      containers:
        - name: financial-data
          image: ashuz057/expensio-financial-data
---
apiVersion: v1
kind: Service
metadata:
  name: financial-data-srv
  namespace: expensio-dev
spec:
  selector:
    app: financial-data
  ports:
    - name: financial-data
      protocol: TCP
      port: 3003
      targetPort: 3003
