infra/k8s/smart-chat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-chat-depl
  namespace: expensio-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smart-chat
  template:
    metadata:
      labels:
        app: smart-chat
    spec:
      containers:
        - name: smart-chat
          image: ashuz057/expensio-smart-chat
---
apiVersion: v1
kind: Service
metadata:
  name: smart-chat-srv
  namespace: expensio-dev
spec:
  selector:
    app: smart-chat
  ports:
    - name: smart-chat
      protocol: TCP
      port: 3000
      targetPort: 3000
